Corrected the sales property bug. Can now fetch properties for rent and for sale.

--- a/src/app/components/property-list/property-list.component.html
+++ b/src/app/components/property-list/property-list.component.html
@@ -1,18 +1,18 @@
 <div class="container">
   <div class="property-list">
-
-    <!-- {{ rentData.map((data: any) => data) }} -->
     <app-property 
       *ngFor="let properties of rentData" 
       [rentProperty]="properties"
       ></app-property>
-      <!-- [saleProperties]="salesProps" -->
-      
-    <!-- <app-property></app-property>
-    <app-property></app-property>
-    <app-property></app-property>
-    <app-property></app-property>
-    <app-property></app-property>
-    <app-property></app-property> -->
+  </div>
+</div>
+
+<!-- SALES DATA COMPONENT -->
+<div class="container">
+  <div class="property-list">
+    <app-property 
+      *ngFor="let properties of saleData" 
+      [rentProperty]="properties"
+    ></app-property>
   </div>
 </div>
