--- a/src/app/pages/search/search.component.html
+++ b/src/app/pages/search/search.component.html
@@ -1,9 +1,12 @@
 <div class="search">
   <div (click)="setSearchFilters()" class="search-toggle">
     <div class="container">
-      <h4>Search Property By Filter <span class="material-icons">
-        filter_list
-        </span></h4>
+      <div style="display: flex; align-items: center;">
+        <h4>Search Property By Filter </h4>
+        <span class="material-icons filter-icon">
+          filter_list
+          </span>
+      </div>
     </div>
   </div>
 </div>
