--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,18 +1,20 @@
 <header>
   <div class="container">
     <nav>
-      <h1>House Agency</h1>
+      <div>
+        <h1>House Agency</h1>
+      </div>
       <ul class="list">
         <li class="list-item"><a routerLink="/home">Home</a></li>
         <li class="list-item"><a routerLink="/search">Search</a></li>
         <li class="list-item"><a routerLink="/buy-property">Buy Property</a></li>
         <li class="list-item"><a routerLink="/rent-property">Rent Property</a></li>
       </ul>
-      <!-- <ul class="list" style="display: none;">
-        <li class="list-item"><a routerLink="/home">Home</a></li>
-        <li class="list-item"><a routerLink="/about">About</a></li>
-        <li class="list-item"><a routerLink="/home">Contact</a></li>
-      </ul> -->
+      <div class="burger">
+        <div class="line line1"></div>
+        <div class="line line2"></div>
+        <div class="line line3"></div>
+      </div>
     </nav>
   </div>
 </header>
