--- a/src/app/components/property-list/property-list.component.html
+++ b/src/app/components/property-list/property-list.component.html
@@ -12,7 +12,7 @@
   <div class="property-list">
     <app-property 
       *ngFor="let properties of saleData" 
-      [rentProperty]="properties"
+      [saleProperties]="properties"
     ></app-property>
   </div>
 </div>
