--- a/src/app/components/property-list/property-list.component.css
+++ b/src/app/components/property-list/property-list.component.css
@@ -5,3 +5,11 @@
   flex-wrap: wrap;
   margin-bottom: 30px;
 }
+
+@media (max-width: 500px) {
+  .property-list {
+    justify-content: center;
+    /* flex: 1; */
+    width: 100%;
+  }
+}
