--- a/src/app/components/property/property.component.css
+++ b/src/app/components/property/property.component.css
@@ -42,6 +42,7 @@
   width: 40px;
   height: 40px;
   border-radius: 50%;
+  padding: 7px 0;
   display: inline-block;
 }
 
@@ -53,7 +54,7 @@
 @media (max-width: 500px) {
   .property {
     width: 100%;
-    margin: 0;
+    margin-right: 0;
     padding: 0;
     flex: 1;
     /* justify-content: center;
